# repurp

./: .gitignore  LICENSE  README.md  pyproject.toml  repurp.spec  requirements.txt
.github/workflows/: publish.yml
src/repurp/: platform_specs.py  repurp.py  use_cli.py
tests/: conftest.py  test_platform_specs.py  test_repurp.py  test_use_cli.py
