[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "repurp"
version = "0.1.0"
description = "Repurpose videos for various social media platforms with optimized settings"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["video", "social media", "ffmpeg", "instagram", "tiktok", "twitter"]
authors = [
    { name = "Chukwuma Nwaugha", email = "chuks@veedo.ai" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Video",
    "Topic :: Utilities",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pre-commit",
    "ruff",
    "mypy",
    "pyinstaller>=6.0.0"
]

[project.urls]
Homepage = "https://github.com/veedoai/repurp"
Repository = "https://github.com/veedoai/repurp"
Issues = "https://github.com/veedoai/repurp/issues"

[project.scripts]
repurp = "repurp.use_cli:main"

[tool.ruff]
line-length = 120
include = ["*.py", "*.pyi", "**/pyproject.toml"]

[tool.ruff.lint]
select = ["D102", "F401"]

[tool.ruff.lint.isort]
case-sensitive = true
relative-imports-order = "closest-to-furthest"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pylint]
max-line-length = 120

[tool.mypy]
ignore_missing_imports = false
